--- a/G/rapport/root.tex
+++ b/G/rapport/root.tex
@@ -49,16 +49,33 @@
 \newcommand{\C}{\mathbb C} %the complex numbers
 
 %listing settings - sml
-\lstloadlanguages{HTML}
-\lstset{language     = ML,
-        extendedchars= true,
-        breaklines   = false,
-        tabsize      = 2,
-        showstringspaces = false,
-        basicstyle   = \small\ttfamily,
-        commentstyle = \em,
-        inputencoding= utf8
-      }
+% Syntax highlighting:
+\usepackage{textcomp}
+\definecolor{listinggray}{gray}{0.9}
+\definecolor{lbcolor}{rgb}{0.9,0.9,0.9}
+\lstset{
+    language=ML,
+    keywordstyle=\bfseries\ttfamily\color[rgb]{0,0,1},
+    identifierstyle=\ttfamily,
+    commentstyle=\color[rgb]{0.133,0.545,0.133},
+    stringstyle=\ttfamily\color[rgb]{0.627,0.126,0.941},
+    showstringspaces=false,
+    basicstyle=\footnotesize,
+    %numberstyle=\footnotesize,
+    %numbers=left,
+    %stepnumber=1,
+    numbersep=10pt,
+    tabsize=2,
+    breaklines=true,
+    prebreak = \raisebox{0ex}[0ex][0ex]{\ensuremath{\hookleftarrow}},
+    breakatwhitespace=false,
+    aboveskip={1.5\baselineskip},
+    columns=fixed,
+    upquote=true,
+    extendedchars=true,
+% frame=single,
+% backgroundcolor=\color{lbcolor},
+}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % End of preamble
