--- a/G/rapport/compiler.tex
+++ b/G/rapport/compiler.tex
@@ -2,3 +2,10 @@
 Stuff goes here. Guess we should include code pieces like in the
 type checker. Should probably talk about register allocation as well and
 our translation to MIPS.
+
+- Cat.NOT bruger slti
+- Cat.If, bruger bne for at kunne bruge $0
+- Null-tupler repræsenteres ved adressen 0
+- Almindelige tupler allokeres på hoben
+- Equals virker kun på int og bool
+- Equals bruger en ny variabel for at gøre det nemmere for registerallokatoren
