make it compile

--- a/G/rapport/compiler.tex
+++ b/G/rapport/compiler.tex
@@ -3,9 +3,11 @@ Stuff goes here. Guess we should include code pieces like in the
 type checker. Should probably talk about register allocation as well and
 our translation to MIPS.
 
-- Cat.NOT bruger slti
-- Cat.If, bruger bne for at kunne bruge $0
-- Null-tupler repræsenteres ved adressen 0
-- Almindelige tupler allokeres på hoben
-- Equals virker kun på int og bool
-- Equals bruger en ny variabel for at gøre det nemmere for registerallokatoren
+\begin{itemize}
+\item Cat.NOT bruger slti
+\item Cat.If, bruger bne for at kunne bruge \$0
+\item Null-tupler repræsenteres ved adressen 0
+\item Almindelige tupler allokeres på hoben
+\item Equals virker kun på int og bool
+\item Equals bruger en ny variabel for at gøre det nemmere for registerallokatoren
+\end{itemize}
