Fjern ref til listing fra lexer

--- a/G/rapport/lexer.tex
+++ b/G/rapport/lexer.tex
@@ -8,8 +8,7 @@ In order to cover all of Cat we have added the following to the file:
 \item [Added keywords] This is pretty straight forward and can be seen in
         listing \ref{lst:lex_keyword}.
 \item [Added tokens] We've added $,$, $=$, $<$ and $@$ to the tokens recognized
-        by the lexer. This can be seen in listing \ref{lst:lex_tokens} in
-        appendix \ref{app:listings}.
+        by the lexer. 
 \end{description}
 
 \begin{lstlisting}
