--- a/G/rapport/parser.tex
+++ b/G/rapport/parser.tex
@@ -9,7 +9,7 @@ additions:
 \item [Added tokens] We have added a lot of tokens (ie. \mono{TRUE},
         \mono{FALSE}, \mono{CASE}, \mono{LET}, etc.).
 \item [Added associativity] With the addition of comparisons, we've also had
-        to assign association to these operators.
+        to assign associativity to these operators.
 \item [Added types] We've added a type for \mono{Cat.TyDec} lists and
         \mono{Cat.Dec}.
 \item [Added productions] A lot of productions had to be added to support all
