--- a/G/rapport/compiler.tex
+++ b/G/rapport/compiler.tex
@@ -43,7 +43,7 @@ Following are some other design choices we have made:
 
 \item [Let expressions] Like in the type checker we are doing these by
         converting them to a case expression with an auxilliary function,
-        \mono{letToCase}.
+        \mono{letToCase}, shown in \autoref{fig:type:lettocase}.
 
 \item [Pattern matching] This is also done much like the type checker. The
         simple types (int, bools, etc.) are evaluated pretty straightforward.
@@ -52,8 +52,7 @@ Following are some other design choices we have made:
         read the addresses from the heap.
 
 \item [Shortcircuiting] We've made sure that \texttt{and} and \texttt{or} are
-        shortcircuiting in order to pass the \texttt{logic.cat} test. This is
-        done in pretty straightforward fashion.
+        shortcircuiting. This is done as shown in \autoref{fig:compiler:and}. 
 \end{description}
 
 \begin{figure}
@@ -69,6 +68,31 @@ Following are some other design choices we have made:
     \end{lstlisting}
     \caption{Implementation of \texttt{not}.}
     \label{fig:compiler:not}
+\end{figure}
+\begin{figure}
+    \centering
+    \begin{lstlisting}
+    | Cat.And (e1, e2, pos) =>
+        let
+          val t1 = "_and1_"^newName()
+          val t2 = "_and2_"^newName()
+          val code1 = compileExp e1 vtable t1
+          val code2 = compileExp e2 vtable t2
+          val lfalse = "_andf_"^newName()
+          val ldone = "_andd_"^newName()
+        in
+          code1 @ [Mips.BEQ (t1, "0", lfalse)]
+                @ code2
+                @ [Mips.BEQ (t2, "0", lfalse),
+                   Mips.LI (place, makeConst 1),
+                   Mips.J ldone,
+                   Mips.LABEL lfalse,
+                   Mips.LI (place, makeConst 0),
+                   Mips.LABEL ldone]
+        end
+    \end{lstlisting}
+    \caption{Implementation of the short-circuiting \texttt{and}.}
+    \label{fig:compiler:and}
 \end{figure}
 
 % Stuff goes here. Guess we should include code pieces like in the type
