--- a/G/rapport/root.tex
+++ b/G/rapport/root.tex
@@ -31,6 +31,9 @@
 %misc
 \usepackage{pdfpages}
 
+%font
+\usepackage{inslrmaj}
+
 %theorems
 \theoremstyle{definition}
 \newtheorem{thm}{Theorem}[section]
